--- a/templates/main.erb
+++ b/templates/main.erb
@@ -9,8 +9,11 @@
   <div id="side-bar">
   </div>
   <div id="main-body">
-    <% histories.each do |h| %>
-        <% h['messages'].each do |m| %>
+    <% histories.each do |ch_id, history| %>
+        <div>
+          <%= channels.find{ |c| c['id'] == ch_id }['name'] %>
+        </div>
+        <% history['messages'].each do |m| %>
             <div><%= user_names[m['user']] %></div>
             <div><%= m['text'] %></div>
         <% end %>
