--- a/templates/main.erb
+++ b/templates/main.erb
@@ -1,5 +1,9 @@
 <html>
 <head>
+  <script src="./js/jquery-2.1.4.min.js"></script>
+  <script src="./js/main.js"></script>
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/ui.css">
 </head>
 <body>
 <div id="header">
@@ -7,16 +11,42 @@
 </div>
 <div id="main">
   <div id="side-bar">
+    <div id="channel-list">
+      <ul>
+        <% channels.each do |c| %>
+            <a href="#channel_<%= c['name'] %>">
+              <li>#<%= c['name'] %></li>
+            </a>
+        <% end %>
+      </ul>
+    </div>
   </div>
   <div id="main-body">
     <% histories.each do |ch_id, history| %>
-        <div>
-          <%= channels.find{ |c| c['id'] == ch_id }['name'] %>
+        <% ch = channels.find{ |c| c['id'] == ch_id } %>
+        <div id="channel_<%= ch['name'] %>" class="channel-container">
+          <div class="channel-name">
+            #<%= ch['name'] %>
+          </div>
+          <% history['messages'].reverse.each do |m| %>
+              <div class="message">
+                <div class="user-icon">
+                  <% user = users.find{ |u| u['id'] == m['user'] } %>
+                  <% if user && user['profile'] && user['profile']['image_32'] %>
+                      <% pp user['profile'] %>
+                      <img src="<%= users.find{ |u| u['id'] == m['user'] }['profile']['image_32'] %>">
+                  <% end %>
+                </div>
+                <div class="user-name"><%= user_names[m['user']] %></div>
+                <% unless m['text'].nil? or m['text'].empty? %>
+                    <div class="message-text"><%= m['text'] %></div>
+                <% end %>
+                <% unless m['attachments'].nil? or m['attachments'].empty? %>
+                    <div class="message-text"><%= m['attachments'] %></div>
+                <% end %>
+              </div>
+          <% end %>
         </div>
-        <% history['messages'].each do |m| %>
-            <div><%= user_names[m['user']] %></div>
-            <div><%= m['text'] %></div>
-        <% end %>
     <% end %>
   </div>
 </div>
