--- a/templates/main.erb
+++ b/templates/main.erb
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <script src="./js/jquery-2.1.4.min.js"></script>
   <script src="./js/main.js"></script>
   <link rel="stylesheet" href="./css/normalize.css">
