--- a/contents/css/ui.css
+++ b/contents/css/ui.css
@@ -41,6 +41,17 @@ html, body {
     border-radius: 5px;
 }
 
+#side-bar #channel-list ul a li .message-count {
+    float: left;
+    display: block;
+    margin: 0 5px;
+    padding: 2px 5px;
+    background-color: #EB4D5C;
+    font-size: 12px;
+    color: #FFFFFF;
+    border-radius: 8px;
+}
+
 #main-body {
     float: left;
     overflow-y: auto;
